--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
@@ -16,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
     "react-tsparticles": "^2.12.2",
+    "three": "^0.181.2",
     "tsparticles": "^3.9.1",
     "web-vitals": "^2.1.4"
   },
